syntax = "proto3";

option csharp_namespace = "Db.API";

package auth;

service Auth {
  // Logs in a given user
  rpc LoginUser(LoginRequest) returns (LoginResult);
  // Registers a new user
  rpc RegisterUser(RegistrationRequest) returns (StringReply);
  // Resends the email verification request
  rpc ResendVerification(IdAndEmail) returns (BooleanReply);
  // Verifies user email
  rpc VerifyEmail(VerifyMailRequest) returns (BooleanReply);
  // Verifies whether a user with a given email exists
  rpc UserExists(SingleString) returns (BooleanReply);
  // Gets a users email based on their user id
  rpc GetUserEmail(SingleString) returns (StringReply);
  // Logs out the current user
  rpc Logout(Nothing) returns (BooleanReply);
  rpc LoggedInEmail(Nothing) returns (StringReply);
}

// Empty message
message Nothing { }

message VerifyMailRequest {
  string userId = 1;
  string code = 2;
}

// Login request reply
message LoginResult {
  // Authentication token
  string token = 1;
  // Login success status
  bool success = 2;
  // Email confirmed
  bool confirmed = 3;
}

// Message containing a single string
message SingleString {
  // String content
  string content = 1;
}

message IdAndEmail {
  string id = 1;
  string email = 2;
}

// User registration request
message RegistrationRequest {
  // User email
  string email = 1;
  // User password
  string password = 2;
}

// User login request
message LoginRequest {
  // User mail
  string email = 1;
  // User password
  string password = 2;
  // Persist login
  bool rememberMe = 3;
}

message StringReply {
  string reply = 1;
}

// Reply of boolean type
message BooleanReply {
  // Reply value
  bool reply = 1;
  // Error code
  int32 error = 2;
}